logs/CodeRED_SCCL_Safe_Compile_Probe_Output.txt
## SC-CL help
exit=0 exit_hex=0x00000000 timed_out=False
COMMAND: D:\Games\Red Dead Redemption\Code_RED\related_apps\code_red_sccl_attempt_bundle_v1\code_red_sccl_windows_build_kit_v1\SC-CL.exe -help
STDOUT:
OVERVIEW:  SC-CL

USAGE: SC-CL.exe [options] <source0> [... <sourceN>]

OPTIONS:

Clang Options:

  -extra-arg=<string>        - Additional argument to append to the compiler command line
  -extra-arg-before=<string> - Additional argument to prepend to the compiler command line
  -p=<string>                - Build path

Compiler Options:

  Choose obfuscation level: (This option is experimental use at your own risk)
    -Fs                      - Obfuscate string table - GTA V Only
    -F1                      - Enable low obfuscations
    -F2                      - Enable default obfuscations
    -F3                      - Enable high obfuscations
    -F4                      - Enable very high obfuscations
    -F5                      - Enable max obfuscations
  Choose optimization level:
    -g                       - No optimizations, enable debugging
    -O1                      - Enable trivial optimizations
    -O2                      - Enable default optimizations
    -O3                      - Enable expensive optimizations
  -emit-asm                  - Emits the pre compiled ASM representation of the script
  -emit-asm-only             - Only emits the pre compiled ASM representation of the script
  -hvi=<uint>                - Sets the starting index for host variables to ignore
  -hvs=<uint>                - Sets the amount of host variables to ignore
  -n                         - Disable function names in script output, Enabled when optimisations are turned on
  -name=<string>             - File name of output script, defaults to input file name
  -no-rsc7                   - Removes the RSC7 header from the output (GTAV)
  -out-dir=<string>          - Specify the output directory of the script
  -pc-version=<uint>         - Sets the pc version for use in the native translation table
  -platform                  - Choose target platform:
    =X360                    -   Target Xbox (32 bit, big endian)
    =PS3                     -   Target PS3 (32 bit, big endian)
    =PC                      -   Target PC (64 bit, little endian)
  -pvi=<uint>                - Sets the starting index for player variables to ignore
  -pvs=<uint>                - Sets the amount of player variables to ignore
  -s                         - Limits script to one instance on runtime (GTAV | GTAIV)
  -target                    - Choose build target:
    =GTAIV                   -   Grand Theft Auto IV (sco output)
    =GTAIV_TLAD              -   Grand Theft Auto IV The Lost and Damned (sco output)
    =GTAIV_TBOGT             -   Grand Theft Auto IV The Ballad of Gay Tony (sco output)
    =GTAV                    -   Grand Theft Auto V (#sc output)
    =RDR_SCO                 -   Red Dead Redemption (sco output)
    =RDR_#SC                 -   Red Dead Redemption (#sc output)
  -vcx=<vcxproj path>        - Parses source files out of a vcxproj file to allow for seamless linking in Visual Studio

General options:

  -stats                     - Enable statistics output from program (available with Asserts)

Generic Options:

  -help                      - Display available options (-help-hidden for more)
  -help-list                 - Display list of available options (-help-list-hidden for more)
  -version                   - Display the version of this program

STDERR:
Starting SC-CL ALPHA 0.7.3.5 running Clang 3.8.1


## compile attempt 1
exit=1 exit_hex=0x00000001 timed_out=False
COMMAND: D:\Games\Red Dead Redemption\Code_RED\related_apps\code_red_sccl_attempt_bundle_v1\code_red_sccl_windows_build_kit_v1\SC-CL.exe -target=RDR_#SC -platform=X360 -out-dir D:\Games\Red Dead Redemption\Code_RED\related_apps\code_red_sccl_attempt_bundle_v1\code_red_sccl_windows_build_kit_v1\output\codered_menu_v1 -name=codered_menu_v1 -extra-arg=-ID:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\include D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\projects\CodeREDMenu\CodeREDMenu.c
STDOUT:

STDERR:
Starting SC-CL ALPHA 0.7.3.5 running Clang 3.8.1
Error while trying to load a compilation database:
Could not auto-detect compilation database for file "D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\projects\CodeREDMenu\CodeREDMenu.c"
No compilation database found in D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\projects\CodeREDMenu or any parent directory
json-compilation-database: Error while opening JSON database: no such file or directory
Running without flags.
Compiling: D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\projects\CodeREDMenu\CodeREDMenu.c
D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\projects\CodeREDMenu\CodeREDMenu.c:62:40: error: too few arguments to function call, expected 8, have 5
    _PRINT_SUBTITLE(text, 3000, 1, 1, 1);
    ~~~~~~~~~~~~~~~                    ^
D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\include/RDR/natives32.h:531:1: note: '_PRINT_SUBTITLE' declared here
extern _native32(0x32394BB6) void _PRINT_SUBTITLE(const char* txt, float time, bool isStringLiteral, int printType, int pram4, int pram5, int pram6, int pram7)l
^
D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\projects\CodeREDMenu\CodeREDMenu.c:164:103: error: too many arguments to function call, expected 5, have 7
    g_vehicle = CREATE_ACTOR_IN_LAYOUT(g_codeRedLayout, "CodeREDMenuVehicle", actorModel, 0.0f, 0.0f, 0.0f, 0.0f);
                ~~~~~~~~~~~~~~~~~~~~~~                                                                ^~~~~~~~~~
D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\include/RDR/natives32.h:370:1: note: 'CREATE_ACTOR_IN_LAYOUT' declared here
extern _native Actor CREATE_ACTOR_IN_LAYOUT(Layout Layout, const char* ActorName, eActor ActorID, vector3 Position, vector3 Rotation)l
^
2 errors generated.


## compile attempt 2
exit=1 exit_hex=0x00000001 timed_out=False
COMMAND: D:\Games\Red Dead Redemption\Code_RED\related_apps\code_red_sccl_attempt_bundle_v1\code_red_sccl_windows_build_kit_v1\SC-CL.exe -target=RDR_SCO -platform=X360 -out-dir D:\Games\Red Dead Redemption\Code_RED\related_apps\code_red_sccl_attempt_bundle_v1\code_red_sccl_windows_build_kit_v1\output\codered_menu_v1 -name=codered_menu_v1 -extra-arg=-ID:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\include D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\projects\CodeREDMenu\CodeREDMenu.c
STDOUT:

STDERR:
Starting SC-CL ALPHA 0.7.3.5 running Clang 3.8.1
Error while trying to load a compilation database:
Could not auto-detect compilation database for file "D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\projects\CodeREDMenu\CodeREDMenu.c"
No compilation database found in D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\projects\CodeREDMenu or any parent directory
json-compilation-database: Error while opening JSON database: no such file or directory
Running without flags.
Compiling: D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\projects\CodeREDMenu\CodeREDMenu.c
D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\projects\CodeREDMenu\CodeREDMenu.c:62:40: error: too few arguments to function call, expected 8, have 5
    _PRINT_SUBTITLE(text, 3000, 1, 1, 1);
    ~~~~~~~~~~~~~~~                    ^
D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\include/RDR/natives32.h:531:1: note: '_PRINT_SUBTITLE' declared here
extern _native32(0x32394BB6) void _PRINT_SUBTITLE(const char* txt, float time, bool isStringLiteral, int printType, int pram4, int pram5, int pram6, int pram7)l
^
D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\projects\CodeREDMenu\CodeREDMenu.c:164:103: error: too many arguments to function call, expected 5, have 7
    g_vehicle = CREATE_ACTOR_IN_LAYOUT(g_codeRedLayout, "CodeREDMenuVehicle", actorModel, 0.0f, 0.0f, 0.0f, 0.0f);
                ~~~~~~~~~~~~~~~~~~~~~~                                                                ^~~~~~~~~~
D:\Games\Red Dead Redemption\Code_RED\resources\SC-CL_bitbucket_source\bin\include/RDR/natives32.h:370:1: note: 'CREATE_ACTOR_IN_LAYOUT' declared here
extern _native Actor CREATE_ACTOR_IN_LAYOUT(Layout Layout, const char* ActorName, eActor ActorID, vector3 Position, vector3 Rotation)l
^
2 errors generated.

